--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -2,10 +2,10 @@ name: workflow-ci-env
 channels:
   - conda-forge
 dependencies:
-  - python=3.10
+  - python=3.12
   - pip
   - pip:
-      - mlflow
+      - mlflow==2.19.0
       - numpy
       - pandas
       - scikit-learn
