--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,6 @@ jobs:
           auto-update-conda: true
           use-mamba: true
 
-      # ✅ penting: pastikan bash membaca environment conda
       - name: Show conda info
         shell: bash -l {0}
         run: |
@@ -29,30 +28,37 @@ jobs:
           conda --version
           conda info
 
-      
       - name: Install MLflow (runner)
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
           pip install mlflow==2.19.0
 
-    
+      - name: Debug structure
+        shell: bash -l {0}
+        run: |
+          echo "=== ROOT ==="
+          pwd
+          ls -la
+          echo "=== MLProject ==="
+          ls -la MLProject
+          echo "=== Dataset dir (should be a folder) ==="
+          file MLProject/german_credit_data_preprocessing || true
+          ls -la MLProject/german_credit_data_preprocessing || true
+
       - name: Run MLflow Project (retrain)
         shell: bash -l {0}
         env:
           MLFLOW_CONDA_HOME: /usr/share/miniconda
         run: |
-          echo "MLFLOW_CONDA_HOME=$MLFLOW_CONDA_HOME"
-          ls -la
-          ls -la MLProject
-          ls -la MLProject/german_credit_data_preprocessing
-
+          # Penting: saat mlflow run ./MLProject, working dir akan masuk ke MLProject/
+          # jadi parameter data_dir cukup nama foldernya saja
           mlflow run ./MLProject \
-            -P data_dir=./MLProject/german_credit_data_preprocessing \
-            -P out_dir=./outputs
+            -P data_dir=german_credit_data_preprocessing \
+            -P out_dir=outputs
 
       - name: Upload outputs artifact
         uses: actions/upload-artifact@v4
         with:
           name: outputs
-          path: outputs
+          path: MLProject/outputs
