--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -9,5 +9,5 @@ dependencies:
       - mlflow==2.19.0
       - numpy
       - pandas
-      - scikit-learn
+      - scikit-learn==1.5.2
       - joblib
