--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-name: CI Retraining with MLflow Project
+name: CI Retraining with MLflow Project (Advance)
 
 on:
   push:
-    paths:
-      - "MLProject/**"
-      - ".github/workflows/**"
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
@@ -15,50 +13,72 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # (Opsional tapi sesuai "Check Env" di contoh Dicoding)
+      - name: Check Env (runner)
+        run: |
+          echo "Runner OS: $(uname -a)"
+          echo "PWD: $(pwd)"
+          ls -la
+
+      # Setup Miniconda (biar conda.yaml MLProject jalan mulus)
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
-          auto-update-conda: true
-          use-mamba: true
+          auto-activate-base: false
+          miniforge-variant: Miniforge3
 
       - name: Show conda info
-        shell: bash -l {0}
         run: |
-          which conda
           conda --version
           conda info
 
+      # Install MLflow (runner-level) untuk menjalankan mlflow project
       - name: Install MLflow (runner)
-        shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
           pip install mlflow==2.19.0
 
       - name: Debug structure
-        shell: bash -l {0}
         run: |
-          echo "=== ROOT ==="
-          pwd
+          echo "Repo root:"
           ls -la
-          echo "=== MLProject ==="
+          echo "MLProject folder:"
           ls -la MLProject
-          echo "=== Dataset dir (should be a folder) ==="
-          file MLProject/german_credit_data_preprocessing || true
-          ls -la MLProject/german_credit_data_preprocessing || true
+          echo "MLProject/data folder:"
+          ls -la MLProject/german_credit_data_preprocessing
 
+      # Retrain via MLflow Project (ini memenuhi Kriteria 3 Basic)
       - name: Run MLflow Project (retrain)
-        shell: bash -l {0}
-        env:
-          MLFLOW_CONDA_HOME: /usr/share/miniconda
         run: |
-          # Penting: saat mlflow run ./MLProject, working dir akan masuk ke MLProject/
-          # jadi parameter data_dir cukup nama foldernya saja
-          mlflow run ./MLProject \
-            -P data_dir=german_credit_data_preprocessing \
-            -P out_dir=outputs
+          mlflow run MLProject -P data_dir=german_credit_data_preprocessing -P out_dir=outputs
 
+      # Upload outputs (ini memenuhi Kriteria 3 Skilled)
       - name: Upload outputs artifact
         uses: actions/upload-artifact@v4
         with:
           name: outputs
-          path: MLProject/outputs
+          path: outputs
+
+      # ===== ADVANCE: Build Docker image pakai mlflow build-docker =====
+      - name: Build Docker Model (mlflow build-docker)
+        run: |
+          echo "Contents of outputs:"
+          ls -la outputs
+          echo "Contents of outputs/model:"
+          ls -la outputs/model
+
+          # Build docker image from MLflow Model directory (outputs/model must contain MLmodel)
+          mlflow models build-docker -m outputs/model -n german-credit-mlflow-ci
+
+          # Tag sesuai Docker Hub repo kamu
+          docker tag german-credit-mlflow-ci:latest reinoufalramadhan/german-credit-mlflow-ci:latest
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Docker Image
+        run: |
+          docker push reinoufalramadhan/german-credit-mlflow-ci:latest
