--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,30 +13,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Ini kunci agar conda "activate" tersedia
       - name: Setup Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: true
-          activate-environment: base
           python-version: "3.12.7"
-          auto-activate-base: true
+          activate-environment: ci
+          auto-activate-base: false
 
       - name: Show conda info
         shell: bash -l {0}
         run: |
-          which conda
           conda --version
+          conda info
+          which python
           python --version
 
-      # Install MLflow runner (untuk menjalankan mlflow run)
       - name: Install MLflow (runner)
         shell: bash -l {0}
         run: |
           python -m pip install --upgrade pip
           pip install mlflow==2.19.0
 
-      # Penting: set MLFLOW_CONDA_HOME supaya MLflow tahu lokasi conda
       - name: Run MLflow Project (retrain)
         shell: bash -l {0}
         env:
@@ -47,7 +45,6 @@ jobs:
           ls -la MLProject/german_credit_data_preprocessing
           mlflow run MLProject -P data_dir=MLProject/german_credit_data_preprocessing -P out_dir=outputs
 
-      # Simpan hasil outputs sebagai artifact workflow (Skilled)
       - name: Upload outputs artifact
         uses: actions/upload-artifact@v4
         with:
