--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -1,13 +1,13 @@
-name: workflow-ci-env
+name: german-credit-mlflow-ci
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
+  - python=3.12.7
   - pip
   - pip:
       - mlflow==2.19.0
       - numpy
       - pandas
+      - matplotlib
       - scikit-learn==1.5.2
-      - joblib
