Rename conda environment and modify dependencies
Renamed environment and updated dependencies.

--- a/MLProject/conda.yaml
+++ b/MLProject/conda.yaml
@@ -1,7 +1,6 @@
-name: german-credit-mlflow-ci
+name: german-credit-ci-env
 channels:
   - conda-forge
-  - defaults
 dependencies:
   - python=3.12.7
   - pip
@@ -9,5 +8,6 @@ dependencies:
       - mlflow==2.19.0
       - numpy
       - pandas
-      - matplotlib
       - scikit-learn==1.5.2
+      - matplotlib
+      - joblib
